--- a/printf/.vscode/settings.json
+++ b/printf/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
         "stdarg.h": "c",
-        "limits.h": "c"
-    }
+        "limits.h": "c",
+        "stdlib.h": "c",
+        "string_view": "c"
+    },
+    "C_Cpp.errorSquiggles": "Disabled"
 }
