--- a/printf/Makefile
+++ b/printf/Makefile
@@ -6,13 +6,13 @@
 #    By: syakovle <syakovle@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/11/09 12:01:20 by syakovle          #+#    #+#              #
-#    Updated: 2022/11/24 15:21:45 by syakovle         ###   ########.fr        #
+#    Updated: 2022/11/22 15:15:17 by syakovle         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = libftprintf.a
+NAME = ft_printf.a
 
-CC = cc
+CC = gcc
 CFLAGS = -Wall -Wextra -Werror
 AR = ar rcs
 RM = rm -f
@@ -20,20 +20,19 @@ LIBFT = libft/libft.a
 
 FILES = ft_printf
 
-SRCS_DIR = ./
+SRCS_DIR = ./ft_printf/
 SRCS = $(addprefix $(SRCS_DIR), $(addsuffix .c, $(FILES)))
 
-OBJS_DIR = ./
+OBJS_DIR = ./ft_printf/
 OBJS = $(addprefix $(OBJS_DIR), $(addsuffix .o, $(FILES)))
 
 
-.c.o:
-	$(CC) -c $(CFLAGS) $< -o $@ 
+.c.o: $(SRCS)
+	$(CC) $(CFLAGS) -c -o $@ $<
 
-$(NAME): $(SRCS:.c=.o)
-	@make -C libft/
-	cp libft/libft.a libftprintf.a
-	$(AR) $@ $(OBJS) libftprintf.a $^
+$(NAME): $(OBJS)
+	$(AR) $@ $(OBJS)
+	@make all -C libft
 
 all: $(NAME)
 
